--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 html{
     scroll-behavior: smooth;
 }
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
 #overlay{
     
     position: relative;
@@ -8,8 +13,6 @@ html{
     width: 100%;
     height: 100vh;
     text-align: center;
-     justify-content: center;
-     margin: auto;
 
     
 }
@@ -26,6 +29,7 @@ html{
     background-image: url("background.jpg");
     background-size: cover;
     background-position: center;
+    width:100%;
 
 }
 .h1{
